@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1606 - Add rowSums, rowMeans and diagonal extraction operations to distributed matrices (dlyubimov)
+
   MAHOUT-1603: Tweaks for Spark 1.0.x (dlyubimov & pferrel)
 
   MAHOUT-1596: implement rbind() operator (Anand Avati and dlyubimov)
